{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 28,
  "lineage": "4556cdb9-047c-80a8-d407-a4d123914c32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodejs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0651ff04b9b983c9f",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0d6f7a769804f2457",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6f7a769804f2457",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng74.farah.aws.key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f68e63f893601033",
            "private_dns": "ip-12-0-1-111.eu-west-1.compute.internal",
            "private_ip": "12.0.1.111",
            "public_ip": "52.214.59.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ae56be1aa3d3888",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c89d759cd6cf083e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06afbac60ebb72f0f",
            "tags": {
              "Name": "farah_eng74_webapp_terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c89d759cd6cf083e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_app",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform-name",
            "module.myip.data.http.ip_address"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0500d467f08c59f1c",
            "id": "igw-0500d467f08c59f1c",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng74_farah_igw_terraform"
            },
            "vpc_id": "vpc-0d62f5eb4e948607c"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0240d06aa65bfd783",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0240d06aa65bfd783",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-06afbac60ebb72f0f"
            ],
            "tags": {
              "Name": "eng74_farah_NACL_app_terraform"
            },
            "vpc_id": "vpc-0d62f5eb4e948607c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cd17954eda48d093",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0500d467f08c59f1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng74_farah_route_table_terraform"
            },
            "vpc_id": "vpc-0d62f5eb4e948607c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8f3b7a4f1e88c15",
            "route_table_id": "rtb-0cd17954eda48d093",
            "subnet_id": "subnet-06afbac60ebb72f0f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_public_table",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0c89d759cd6cf083e",
            "description": "allows traffic to app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c89d759cd6cf083e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "2.28.154.108/32"
                ],
                "description": "Port 3000 for my ip",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "2.28.154.108/32"
                ],
                "description": "port 22 from my ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_sg_for_app_farah",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng74_farah_sg_app_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d62f5eb4e948607c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-terraform-name",
            "module.myip.data.http.ip_address"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-06afbac60ebb72f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "12.0.1.0/24",
            "id": "subnet-06afbac60ebb72f0f",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng74_farah_subnet_public_terraform"
            },
            "vpc_id": "vpc-0d62f5eb4e948607c"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terraform-name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0d62f5eb4e948607c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0eed2cddf389fc918",
            "default_route_table_id": "rtb-0a3a5bfc99cbd86ed",
            "default_security_group_id": "sg-092054fea9738e325",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d62f5eb4e948607c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3a5bfc99cbd86ed",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng74_farah_vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}